<resources>
    <string name="app_name">FEI-EATS</string>
    <string name="login">Inicio de Sesión</string>


    <string-array name="rol">
        <item>Usuario</item>
        <item>Vendedor</item>
    </string-array>

    <string-array name="categoria">
        <item>Dulces</item>
        <item>Comida</item>
    </string-array>

    <string name="foto_de_producto">INGRESA FOTO DE PERFIL</string>
    <string name="foto_de_vendedor">FOTO DE VENDEDOR</string>
    <string name="texto_registro">Regístrate, es gratis!</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">signin</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="welcome">Bienvenido</string>
    <string name="login_failed">fail</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Más de 5 carácteres</string>
    <string name="text_contrasena">Contraseña</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="text_login">Inicia sesión</string>
    <string name="text_telefono">Telefono</string>
    <string name="text_usuario">Correo electrónico</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="bonton_registrar">Registrarse</string>
    <string name="entrar">Iniciar Sesión</string>
    <string name="cargando_datos">Cargando datos...</string>
    <string name="contrase_a">Contraseña</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="eliminar_perfil">Eliminar perfil</string>
    <string name="contrase_a1">Contraseña : *****</string>
    <string name="elegir_de_galer_a">Elegir de galería</string>
    <string name="eliminar_foto">Eliminar foto</string>
    <string name="fotoperfil">fotoperfil</string>
    <string name="editar_informaci_n">Editar información</string>
    <string name="regresar">Regresar</string>
    <string name="todo">TODO</string>
</resources>
